Fixed styling
Changed font size and units on the select difficulty label because the
font was too big on big screens

--- a/src/styles/select-difficulty.css
+++ b/src/styles/select-difficulty.css
@@ -28,7 +28,7 @@
 #select-difficulty-label{
   width: 100%;
   text-align: center;
-  font-size: 5vmin;
+  font-size: 2rem;
 }
 
 #difficulty-button-container{
